Opened 15 years ago

Closed 10 years ago

#4512 closed bug (fixed)

.mov files don't play smoothly in MediaPlayer

Reported by: PieterPanman Owned by: dlmcpaul
Priority: normal Milestone: R1
Component: Audio & Video/Codecs Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

From http://www.codectest.com/codectest/streaming-video-codecs.html Files wheelie.mov and wheeliesorensonvideo3provbr.mov

Both play, but shaky. Looks like some frames are skipped and played a little bit later than they are supposed to. Low cpu usage. No sound.

Change History (9)

comment:2 by dlmcpaul, 15 years ago

Owner: changed from marcusoverhagen to dlmcpaul

comment:3 by Coldfirex, 14 years ago

Unable to reproduce. Sounds and video correct. hrev39551 gcc2hybrid under virtual box 3.2.10.

comment:4 by phoudoin, 14 years ago

I confirm that too.

Only wheeliesorensonvideo2cbr.mov from that samples set don't play fine under Media Player, while it's playing with VLC 0.8.6d (under Haiku, but with a several artifacts, similar to the ones visibles while playing wheelieMPEG2.mpg with MediaPlayer (VLC 0.8.6d blocks after a few seconds on this file BTW ;-) ).

According to the videocomparisontest.txt (sic) file, the wheeliesorenson2cbr.mov file was encoded with Quicktime Player.

ffmpeg plugin reports for the CBR file:

  • video codec: Sorenson Vector Quantizer 1 / Sorenson Video 3
  • audio codec: QCELP / PureVoice 32bits mono channel @ 48kHz.

The VBR version (wheeliesorensonvideo3provbr.mov) reports:

  • video codec: Sorenson Vector Quantizer 3 / Sorenson Video 3
  • audio codec: AAC, 16bits stereo @ 44kHz.

As audio were supposed to all be in AAC in stereo, my guess is that something goes wrong in ffmpeg 0.6.1 regarding audio track identification and/or decoding.

comment:5 by korli, 13 years ago

Please check again with a current revision.

comment:6 by korli, 13 years ago

Please check again with a current revision.

comment:7 by harvard, 12 years ago

.mov files don't play smoothly in MediaPlayer in Haiku alpha4.1/R1

comment:8 by pulkomandy, 10 years ago

wheelie.mov looks ok now (hrev48340).

wheeliesorensonvideo2cbr decodes at the wrong size. wheelie.mp4 decodes only the first video frame, then only sound.

comment:9 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed wheeliesorensonvideo2cbr.mov in hrev48467. The problem with wheelie.mp4 is the same as #11283 so tracking it there and closing this ticket.

Note: See TracTickets for help on using tickets.